LP/Practica/funx/FunxParser.py
# Generated from Funx.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class FunxParser ( Parser ):

    grammarFileName = "Funx.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "'<-'", "'='", 
                     "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'if'", "'else'", "'while'", "'do'", 
                     "'func'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ASSIGN", "E", "NE", "GE", "LE", "GT", 
                      "LT", "PLUS", "MINUS", "MUL", "DIV", "MOD", "IF", 
                      "ELSE", "WHILE", "DO", "FUNC", "RETURN", "INT", "VARID", 
                      "FUNCID", "COMMENT", "WS" ]

    RULE_root = 0
    RULE_function = 1
    RULE_parameters = 2
    RULE_statements = 3
    RULE_statement = 4
    RULE_left_expr = 5
    RULE_expr = 6
    RULE_ident = 7

    ruleNames =  [ "root", "function", "parameters", "statements", "statement", 
                   "left_expr", "expr", "ident" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    ASSIGN=5
    E=6
    NE=7
    GE=8
    LE=9
    GT=10
    LT=11
    PLUS=12
    MINUS=13
    MUL=14
    DIV=15
    MOD=16
    IF=17
    ELSE=18
    WHILE=19
    DO=20
    FUNC=21
    RETURN=22
    INT=23
    VARID=24
    FUNCID=25
    COMMENT=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FunxParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.FunctionContext)
            else:
                return self.getTypedRuleContext(FunxParser.FunctionContext,i)


        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)


        def getRuleIndex(self):
            return FunxParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = FunxParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 16
                    self.function() 
                self.state = 21
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.T__2) | (1 << FunxParser.INT) | (1 << FunxParser.VARID) | (1 << FunxParser.FUNCID))) != 0):
                self.state = 22
                self.expr(0)


            self.state = 25
            self.match(FunxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCID(self):
            return self.getToken(FunxParser.FUNCID, 0)

        def parameters(self):
            return self.getTypedRuleContext(FunxParser.ParametersContext,0)


        def statements(self):
            return self.getTypedRuleContext(FunxParser.StatementsContext,0)


        def getRuleIndex(self):
            return FunxParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = FunxParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(FunxParser.FUNCID)
            self.state = 28
            self.parameters()
            self.state = 29
            self.match(FunxParser.T__0)
            self.state = 30
            self.statements()
            self.state = 31
            self.match(FunxParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARID(self, i:int=None):
            if i is None:
                return self.getTokens(FunxParser.VARID)
            else:
                return self.getToken(FunxParser.VARID, i)

        def getRuleIndex(self):
            return FunxParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = FunxParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FunxParser.VARID:
                self.state = 33
                self.match(FunxParser.VARID)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.StatementContext)
            else:
                return self.getTypedRuleContext(FunxParser.StatementContext,i)


        def getRuleIndex(self):
            return FunxParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = FunxParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.T__2) | (1 << FunxParser.IF) | (1 << FunxParser.WHILE) | (1 << FunxParser.INT) | (1 << FunxParser.VARID) | (1 << FunxParser.FUNCID))) != 0):
                self.state = 39
                self.statement()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(FunxParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)

        def statements(self):
            return self.getTypedRuleContext(FunxParser.StatementsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(FunxParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.StatementsContext)
            else:
                return self.getTypedRuleContext(FunxParser.StatementsContext,i)

        def ELSE(self):
            return self.getToken(FunxParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class AssignStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def left_expr(self):
            return self.getTypedRuleContext(FunxParser.Left_exprContext,0)

        def ASSIGN(self):
            return self.getToken(FunxParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = FunxParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = FunxParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.left_expr()
                self.state = 46
                self.match(FunxParser.ASSIGN)
                self.state = 47
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = FunxParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(FunxParser.IF)
                self.state = 50
                self.expr(0)
                self.state = 51
                self.match(FunxParser.T__0)
                self.state = 52
                self.statements()
                self.state = 53
                self.match(FunxParser.T__1)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FunxParser.ELSE:
                    self.state = 54
                    self.match(FunxParser.ELSE)
                    self.state = 55
                    self.match(FunxParser.T__0)
                    self.state = 56
                    self.statements()
                    self.state = 57
                    self.match(FunxParser.T__1)


                pass

            elif la_ == 3:
                localctx = FunxParser.WhileStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(FunxParser.WHILE)
                self.state = 62
                self.expr(0)
                self.state = 63
                self.match(FunxParser.T__0)
                self.state = 64
                self.statements()
                self.state = 65
                self.match(FunxParser.T__1)
                pass

            elif la_ == 4:
                localctx = FunxParser.ReturnStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Left_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_left_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LeftIdentContext(Left_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.Left_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(FunxParser.IdentContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeftIdent" ):
                return visitor.visitLeftIdent(self)
            else:
                return visitor.visitChildren(self)



    def left_expr(self):

        localctx = FunxParser.Left_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_left_expr)
        try:
            localctx = FunxParser.LeftIdentContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FuncExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNCID(self):
            return self.getToken(FunxParser.FUNCID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncExpr" ):
                return visitor.visitFuncExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPars" ):
                return visitor.visitPars(self)
            else:
                return visitor.visitChildren(self)


    class ExprIdentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(FunxParser.IdentContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprIdent" ):
                return visitor.visitExprIdent(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def MUL(self):
            return self.getToken(FunxParser.MUL, 0)
        def DIV(self):
            return self.getToken(FunxParser.DIV, 0)
        def MOD(self):
            return self.getToken(FunxParser.MOD, 0)
        def PLUS(self):
            return self.getToken(FunxParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(FunxParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetic" ):
                return visitor.visitArithmetic(self)
            else:
                return visitor.visitChildren(self)


    class RelationalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def E(self):
            return self.getToken(FunxParser.E, 0)
        def NE(self):
            return self.getToken(FunxParser.NE, 0)
        def GE(self):
            return self.getToken(FunxParser.GE, 0)
        def LE(self):
            return self.getToken(FunxParser.LE, 0)
        def GT(self):
            return self.getToken(FunxParser.GT, 0)
        def LT(self):
            return self.getToken(FunxParser.LT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational" ):
                return visitor.visitRelational(self)
            else:
                return visitor.visitChildren(self)


    class ValueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(FunxParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FunxParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FunxParser.T__2]:
                localctx = FunxParser.ParsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 73
                self.match(FunxParser.T__2)
                self.state = 74
                self.expr(0)
                self.state = 75
                self.match(FunxParser.T__3)
                pass
            elif token in [FunxParser.FUNCID]:
                localctx = FunxParser.FuncExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 77
                self.match(FunxParser.FUNCID)
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 78
                    self.expr(0)
                    self.state = 82
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 79
                            self.expr(0) 
                        self.state = 84
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,6,self._ctx)



                pass
            elif token in [FunxParser.VARID]:
                localctx = FunxParser.ExprIdentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 87
                self.ident()
                pass
            elif token in [FunxParser.INT]:
                localctx = FunxParser.ValueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 88
                self.match(FunxParser.INT)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 100
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = FunxParser.ArithmeticContext(self, FunxParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 91
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 92
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.MUL) | (1 << FunxParser.DIV) | (1 << FunxParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 93
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = FunxParser.ArithmeticContext(self, FunxParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 94
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 95
                        _la = self._input.LA(1)
                        if not(_la==FunxParser.PLUS or _la==FunxParser.MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 96
                        self.expr(5)
                        pass

                    elif la_ == 3:
                        localctx = FunxParser.RelationalContext(self, FunxParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 97
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 98
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FunxParser.E) | (1 << FunxParser.NE) | (1 << FunxParser.GE) | (1 << FunxParser.LE) | (1 << FunxParser.GT) | (1 << FunxParser.LT))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 99
                        self.expr(4)
                        pass

             
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class IdentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARID(self):
            return self.getToken(FunxParser.VARID, 0)

        def getRuleIndex(self):
            return FunxParser.RULE_ident

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdent" ):
                return visitor.visitIdent(self)
            else:
                return visitor.visitChildren(self)




    def ident(self):

        localctx = FunxParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ident)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(FunxParser.VARID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         




